--- a/SnowFur/packages.config
+++ b/SnowFur/packages.config
@@ -1,33 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
-  <package id="AutoMapper" version="4.0.4" targetFramework="net451" />
+  <package id="AutoMapper" version="4.2.0" targetFramework="net452" />
   <package id="bootstrap" version="4.0.0-alpha" targetFramework="net451" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
   <package id="Castle.Windsor.Extensions" version="2.1.1" targetFramework="net452" />
-  <package id="DotVVM" version="0.8.6.5-pre" targetFramework="net452" />
+  <package id="DotVVM" version="0.9.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
-  <package id="ExpressionEvaluator" version="2.0.3.0" targetFramework="net451" />
-  <package id="jQuery" version="2.1.4" targetFramework="net451" />
+  <package id="ExpressionEvaluator" version="2.0.4.0" targetFramework="net452" />
+  <package id="jQuery" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.1.1" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
-  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net451" />
-  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net451" />
-  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net451" />
-  <package id="Riganti.Utils.Infrastructure.Core" version="1.0.2" targetFramework="net452" />
-  <package id="Riganti.Utils.Infrastructure.EntityFramework" version="1.0.2" targetFramework="net452" />
-  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net451" />
-  <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net451" />
+  <package id="Riganti.Utils.Infrastructure.Core" version="1.0.3" targetFramework="net452" />
+  <package id="Riganti.Utils.Infrastructure.EntityFramework" version="1.0.3" targetFramework="net452" />
+  <package id="System.Collections" version="4.0.0" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net452" />
+  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net452" />
+  <package id="System.Globalization" version="4.0.0" targetFramework="net452" />
+  <package id="System.IO" version="4.0.0" targetFramework="net452" />
+  <package id="System.Linq" version="4.0.0" targetFramework="net452" />
+  <package id="System.Reflection" version="4.0.0" targetFramework="net452" />
+  <package id="System.Reflection.Extensions" version="4.0.0" targetFramework="net452" />
+  <package id="System.Reflection.Metadata" version="1.1.0" targetFramework="net452" />
+  <package id="System.Reflection.Primitives" version="4.0.0" targetFramework="net452" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices" version="4.0.0" targetFramework="net452" />
+  <package id="System.Text.Encoding" version="4.0.0" targetFramework="net452" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net452" />
+  <package id="System.Threading" version="4.0.0" targetFramework="net452" />
   <package id="Twitter.Bootstrap.Bootswatch.Cerulean" version="3.2.0.0" targetFramework="net451" />
 </packages>
