--- a/SnowFur/packages.config
+++ b/SnowFur/packages.config
@@ -1,21 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
-  <package id="AutoMapper" version="4.2.0" targetFramework="net452" />
+  <package id="AutoMapper" version="5.1.1" targetFramework="net452" />
   <package id="bootstrap" version="4.0.0-alpha" targetFramework="net451" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
-  <package id="Castle.Windsor.Extensions" version="2.1.1" targetFramework="net452" />
-  <package id="DotVVM" version="0.9.0.0" targetFramework="net452" />
+  <package id="Castle.Windsor.Extensions" version="2.2.1.2" targetFramework="net452" />
+  <package id="DotVVM" version="1.0.8-pre" targetFramework="net461" />
+  <package id="DotVVM.Core" version="1.1.0-alpha" targetFramework="net461" />
+  <package id="DotVVM.Owin" version="1.1.0-alpha" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="ExpressionEvaluator" version="2.0.4.0" targetFramework="net452" />
-  <package id="jQuery" version="2.2.0" targetFramework="net452" />
+  <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.1.1" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.1" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net452" />
+  <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyModel" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.PlatformAbstractions" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
@@ -23,26 +31,66 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
+  <package id="NETStandard.Library" version="1.6.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Riganti.Utils.Infrastructure.Core" version="1.0.3" targetFramework="net452" />
   <package id="Riganti.Utils.Infrastructure.EntityFramework" version="1.0.3" targetFramework="net452" />
-  <package id="System.Collections" version="4.0.0" targetFramework="net452" />
-  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net452" />
-  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net452" />
-  <package id="System.Globalization" version="4.0.0" targetFramework="net452" />
-  <package id="System.IO" version="4.0.0" targetFramework="net452" />
-  <package id="System.Linq" version="4.0.0" targetFramework="net452" />
-  <package id="System.Reflection" version="4.0.0" targetFramework="net452" />
-  <package id="System.Reflection.Extensions" version="4.0.0" targetFramework="net452" />
-  <package id="System.Reflection.Metadata" version="1.1.0" targetFramework="net452" />
-  <package id="System.Reflection.Primitives" version="4.0.0" targetFramework="net452" />
-  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net452" />
-  <package id="System.Runtime" version="4.0.0" targetFramework="net452" />
-  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net452" />
-  <package id="System.Runtime.InteropServices" version="4.0.0" targetFramework="net452" />
-  <package id="System.Text.Encoding" version="4.0.0" targetFramework="net452" />
-  <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net452" />
-  <package id="System.Threading" version="4.0.0" targetFramework="net452" />
+  <package id="System.AppContext" version="4.1.0" targetFramework="net461" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net452" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net452" />
+  <package id="System.ComponentModel" version="4.0.1" targetFramework="net461" />
+  <package id="System.Console" version="4.0.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net452" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net461" />
+  <package id="System.Diagnostics.FileVersionInfo" version="4.0.0" targetFramework="net461" />
+  <package id="System.Diagnostics.StackTrace" version="4.0.1" targetFramework="net461" />
+  <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="net461" />
+  <package id="System.Diagnostics.Tracing" version="4.1.0" targetFramework="net461" />
+  <package id="System.Dynamic.Runtime" version="4.0.11" targetFramework="net461" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net452" />
+  <package id="System.Globalization.Calendars" version="4.0.1" targetFramework="net461" />
+  <package id="System.IO" version="4.1.0" targetFramework="net452" />
+  <package id="System.IO.Compression" version="4.1.0" targetFramework="net461" />
+  <package id="System.IO.Compression.ZipFile" version="4.0.1" targetFramework="net461" />
+  <package id="System.IO.FileSystem" version="4.0.1" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net452" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.1.0" targetFramework="net461" />
+  <package id="System.Net.Primitives" version="4.0.11" targetFramework="net461" />
+  <package id="System.Net.Sockets" version="4.1.0" targetFramework="net461" />
+  <package id="System.ObjectModel" version="4.0.12" targetFramework="net461" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net452" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net452" />
+  <package id="System.Reflection.Metadata" version="1.3.0" targetFramework="net452" />
+  <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net452" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net452" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net452" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net452" />
+  <package id="System.Runtime.Handles" version="4.0.1" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
+  <package id="System.Runtime.Numerics" version="4.0.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net452" />
+  <package id="System.Text.Encoding.CodePages" version="4.0.1" targetFramework="net461" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net452" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net452" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Parallel" version="4.0.1" targetFramework="net461" />
+  <package id="System.Threading.Thread" version="4.0.0" targetFramework="net461" />
+  <package id="System.Threading.Timer" version="4.0.1" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net461" />
+  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net461" />
+  <package id="System.Xml.XmlDocument" version="4.0.1" targetFramework="net461" />
+  <package id="System.Xml.XPath" version="4.0.1" targetFramework="net461" />
+  <package id="System.Xml.XPath.XDocument" version="4.0.1" targetFramework="net461" />
   <package id="Twitter.Bootstrap.Bootswatch.Cerulean" version="3.2.0.0" targetFramework="net451" />
 </packages>
