--- a/SnowFur.BL/packages.config
+++ b/SnowFur.BL/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="AutoMapper" version="5.1.1" targetFramework="net452" />
-  <package id="DotVVM.Core" version="1.1.0-alpha" targetFramework="net461" />
+  <package id="DotVVM.Core" version="1.1.0-beta" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="ExpressionEvaluator" version="2.0.4.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
