--- a/SnowFur/packages.config
+++ b/SnowFur/packages.config
@@ -6,9 +6,9 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
   <package id="Castle.Windsor.Extensions" version="2.2.1.2" targetFramework="net452" />
-  <package id="DotVVM" version="1.0.8-pre" targetFramework="net461" />
-  <package id="DotVVM.Core" version="1.1.0-alpha" targetFramework="net461" />
-  <package id="DotVVM.Owin" version="1.1.0-alpha" targetFramework="net461" />
+  <package id="DotVVM" version="1.1.0-beta" targetFramework="net461" />
+  <package id="DotVVM.Core" version="1.1.0-beta" targetFramework="net461" />
+  <package id="DotVVM.Owin" version="1.1.0-beta" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="ExpressionEvaluator" version="2.0.4.0" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
