--- a/SnowFur.BL/SnowFur.BL.csproj
+++ b/SnowFur.BL/SnowFur.BL.csproj
@@ -187,6 +187,7 @@
       <HintPath>..\packages\System.Security.Cryptography.X509Certificates.4.1.0\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.ServiceModel.Activities" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -200,20 +201,45 @@
     <Compile Include="Dtos\AttendeeListItemDto.cs" />
     <Compile Include="Dtos\BroadcastMailDto.cs" />
     <Compile Include="Dtos\ChangePasswordDto.cs" />
-    <Compile Include="Dtos\PersonalProfileDto.cs" />
-    <Compile Include="Dtos\NewPasswordDto.cs" />
-    <Compile Include="Dtos\RoomReservationListDto.cs" />
-    <Compile Include="Dtos\RoomReservationDto.cs" />
-    <Compile Include="Dtos\UserEmailListDto.cs" />
-    <Compile Include="Facades\ApplicationFacadeBase.cs" />
-    <Compile Include="Facades\ConventionInfoFacade.cs" />
-    <Compile Include="Facades\CrudFacadeBase.cs" />
-    <Compile Include="Facades\LoginFacade.cs" />
-    <Compile Include="Facades\MailingFacade.cs" />
-    <Compile Include="Facades\PaymentHelper.cs" />
+    <Compile Include="Dtos\ConventionDetailDto.cs" />
+    <Compile Include="Dtos\ConventionListDto.cs" />
+    <Compile Include="Dtos\PaymentInfoDto.cs" />
+    <Compile Include="Dtos\ServiceDetailDto.cs" />
+    <Compile Include="Dtos\ServiceListDto.cs" />
+    <Compile Include="Dtos\ServiceUserOrderListDto.cs" />
+    <Compile Include="Dtos\ReservedRoomListDto.cs" />
+    <Compile Include="Dtos\RoomDetailDto.cs" />
+    <Compile Include="Dtos\RoomListDto.cs" />
+    <Compile Include="Dtos\UserPasswordResetDto.cs" />
+    <Compile Include="Facades\AccountFacade.cs" />
     <Compile Include="Facades\PersonalProfileFacade.cs" />
     <Compile Include="Facades\RoomReservationFacade.cs" />
-    <Compile Include="Filters\RoomReservationFilter.cs" />
+    <Compile Include="Filters\ConventionFilter.cs" />
+    <Compile Include="Filters\ConventionUserFilter.cs" />
+    <Compile Include="Installers\IMapperInstaller.cs" />
+    <Compile Include="Dtos\PersonalProfileDto.cs" />
+    <Compile Include="Dtos\NewPasswordDto.cs" />
+    <Compile Include="Dtos\UserEmailDto.cs" />
+    <Compile Include="Dtos\UserBasicInfoDto.cs" />
+    <Compile Include="Installers\AutoMapperInstaller.cs" />
+    <Compile Include="Queries\ReservedRoomsQuery.cs" />
+    <Compile Include="Queries\ServiceListQuery.cs" />
+    <Compile Include="Queries\ServiceUserOrderQuery.cs" />
+    <Compile Include="Queries\ConventionListQuery.cs" />
+    <Compile Include="Services\ApplicationServiceBase.cs" />
+    <Compile Include="Facades\ConventionFacade.cs" />
+    <Compile Include="Services\ConventionService.cs" />
+    <Compile Include="Services\CrudServiceBase.cs" />
+    <Compile Include="Services\IServiceOrderStrategy.cs" />
+    <Compile Include="Services\PaymentService.cs" />
+    <Compile Include="Services\ServiceOrderService.cs" />
+    <Compile Include="Services\RoomService.cs" />
+    <Compile Include="Services\RoomReservationService.cs" />
+    <Compile Include="Services\ServiceService.cs" />
+    <Compile Include="Services\UserService.cs" />
+    <Compile Include="Facades\MailingFacade.cs" />
+    <Compile Include="Services\PersonalProfileService.cs" />
+    <Compile Include="Filters\DefaultFilter.cs" />
     <Compile Include="Filters\UserEmailFilter.cs" />
     <Compile Include="Mailer\MailerService.cs" />
     <Compile Include="Mailer\NewAccountEmail.cs">
@@ -234,7 +260,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\ApplicationQueryBase.cs" />
     <Compile Include="Queries\AttendeesQuery.cs" />
-    <Compile Include="Queries\RoomReservationsQuery.cs" />
+    <Compile Include="Queries\RoomListQuery.cs" />
     <Compile Include="Queries\UserEmailsQuery.cs" />
     <Compile Include="Repositories\ConventionPaymentRepository.cs" />
     <Compile Include="Repositories\RoomRepository.cs" />
@@ -283,6 +309,7 @@
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
