--- a/SnowFur/Web.config
+++ b/SnowFur/Web.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=SnowFur; Integrated Security=True" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SnowFur; Integrated Security=True" />
   </connectionStrings>
   <appSettings>
     <add key="WebsiteDomain" value="http://www.snowfur.info/" />
